--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "lodash": "^4.16.4",
     "mongoose": "^4.6.4",
+    "mongoose-schema-formatdate": "^1.0.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
