--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "r": "nodemon ./bin/www"
   },
   "dependencies": {
     "bluebird": "^3.4.6",
